--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Challenge Chapter 3</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body background="https://img.freepik.com/free-vector/circuit-lines-technology-diagram-background-red-shade_1017-26284.jpg?w=826">
+<body background = "main-bg.jpg">
     <nav>
         <div class="wrapper">
             <div class="logo"><a href="">LOGO</a></div>
