--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h7> &#9661; </h7>
                 </div>
         </section>
-        <!--untuk work-->
+        <!--The Games-->
         <section id="work">
             <div class="games">
              <p class="deskripsi">What's so special?</p>
@@ -86,6 +86,8 @@
                   </div>
             </div>
         </section>
+
+         <!--Features-->
         <section id="about me">
             <div class="features">
                 <h10 class="desc">What's so special?</h10>
@@ -96,6 +98,8 @@
                 <h11>&#9674; TBD</h11>
             </div>
         </section>
+
+        <!--sysreq-->
         <section id="contact">
             <div class="system">
                 <h13>Can My Computer Run This Game ? </h13>
@@ -138,6 +142,8 @@
                 </div>
             </div>
         </section>
+
+        <!--Top Score-->
         <section id="scores">
              <div class="score">
                 <div class="row score-content">
@@ -158,7 +164,7 @@
                             <div class="card-body">
                                 <div class="card-info-top">
                                     <figure>
-                                        <img src="main-bg.jpg" width="50px" height="50px" class="gamer-pic">
+                                        <img src="evan.png" width="50px" height="50px" class="gamer-pic">
                                     </figure>
                                     <div class="gamer">
                                         <p class="card-title gamer-name">
@@ -184,7 +190,7 @@
                             <div class="card-body">
                                 <div class="card-info-top">
                                     <figure>
-                                        <img src="main-bg.jpg" width="50px" height="50px" class="gamer-pic">
+                                        <img src="jada.png" width="50px" height="50px" class="gamer-pic">
                                     </figure>
                                     <div class="gamer">
                                         <p class="card-title gamer-name">
@@ -213,7 +219,7 @@
                             <div class="card-body">
                                 <div class="card-info-top">
                                     <figure>
-                                        <img src="main-bg.jpg" width="50px" height="50px" class="gamer-pic">
+                                        <img src="aaron.png" width="50px" height="50px" class="gamer-pic">
                                     </figure>
                                     <div class="gamer">
                                         <p class="card-title gamer-name">
@@ -242,14 +248,14 @@
                  </div>
                 </div>
         </section>
-
+        <!--Last Page-->
         <footer class="footer">
             <div class="row row-cols-1 pl-5">
                 <div class="col mb-2 footer-content">
                     <div class="row">
                         <div class="col-xl footer-content-left">
                             <figure>
-                                <img src="main-bg.jpg" width="400px" height="550px" alt="skull">
+                                <img src="skull.webp" width="400px" height="550px" alt="skull">
                             </figure>
                         </div>
                         <div class="col-xl footer-content-right">
